--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
    runs-on: ubuntu-latest
    steps:
     - name: echo
-      run: echo ${{ github.workflow }}
+      run: echo ${{ github.ref }}
