--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -14,8 +14,16 @@ jobs:
     steps:
       - name: Extract Substring
         id: extract
-        run: echo "s1=hello" >> $GITHUB_ENV
+        run: echo "s1=hello-i" >> $GITHUB_ENV
 
       - name: use
         run: echo "${{env.s1}}"
+
+      - name: use1
+        id: get-id
+        uses: actions/github-script@0.9.0
+        with:
+         script: |
+           const id = ${{env.s1}}.split('-')[1]
+      - run: echo "s2=${{id}}" >> GITHUB_ENV
 
