--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -27,3 +27,11 @@ jobs:
            const id = ${{env.s1}}.split('-')[1]
            echo id
 
+  
+      - name: Extract substring
+        run: |
+          original_string="Hello_World"
+          substring=${original_string#*_}
+          echo "The substring after '_' is: $substring"
+
+
