--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -14,24 +14,25 @@ jobs:
     steps:
       - name: Extract Substring
         id: extract
-        run: echo "s1=hello-i" >> $GITHUB_ENV
+        shell: bash
+        run: $(echo "h-1" | cut -d ' ' -f 2)
 
-      - name: use
-        run: echo "${{env.s1}}"
+      # - name: use
+      #   run: echo "${{env.s1}}"
 
-      - name: use1
-        id: get-id
-        uses: actions/github-script@0.9.0
-        with:
-         script: |
-           const id = ${{env.s1}}.split('-')[1]
-           echo id
+      # - name: use1
+      #   id: get-id
+      #   uses: actions/github-script@0.9.0
+      #   with:
+      #    script: |
+      #      const id = ${{env.s1}}.split('-')[1]
+      #      echo id
 
   
-      - name: Extract substring
-        run: |
-          original_string="Hello_World"
-          substring=$(echo $original_string | cut -d'_' -f2-)
-          echo "The substring after '_' is: $substring"
+      # - name: Extract substring
+      #   run: |
+      #     original_string="Hello_World"
+      #     substring=$(echo $original_string | cut -d'_' -f2-)
+      #     echo "The substring after '_' is: $substring"
 
 
