--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -10,15 +10,14 @@ jobs:
   substring:
     runs-on: ubuntu-latest
     steps:
-      - name: Extract Substring
-        id: extract
-        run: echo "s1=${{"hello-i" | cut -d ' ' -f 1}}" >> $GITHUB_ENV
-      # - name: Extract Substring
-      #   id: extract
-      #   shell: bash
-      #   run: |
-      #    name="John Doe"
-      #    echo ${name} | cut -d ' ' -f 1
+       - name: Extract Substring
+         id: extract
+         shell: bash
+         run: |
+           echo "s11=hj" >> $GITHUB_ENV
+       - name: Extract Substring1
+         run: echo "s1=${{${{env.s11}} | cut -d ' ' -f 1}}" >> $GITHUB_ENV
+     
          
 
       # - name: use
