--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -16,7 +16,8 @@ jobs:
          run: |
            echo "s11=hj" >> $GITHUB_ENV
        - name: Extract Substring1
-         run: echo "s1=${{${{env.s11}} | cut -d ' ' -f 1}}" >> $GITHUB_ENV
+         run: echo "${{env.s1}}"
+         # run: echo "s1=${{${{env.s11}} | cut -d ' ' -f 1}}" >> $GITHUB_ENV
      
          
 
