--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -18,7 +18,7 @@ jobs:
        - name: Extract Substring1
          run:  |
           echo "s1=${{env.s11}} | cut -d '-' -f 1" >> $GITHUB_ENV
-          echo ${{env.s1}}
+          echo "${{env.s1}}"
      
          
 
