--- a/.github/workflows/sss.yml
+++ b/.github/workflows/sss.yml
@@ -14,12 +14,12 @@ jobs:
          id: extract
          shell: bash
          run: |
-           echo "s11=h-j" >> $GITHUB_ENV
+           name="ghh-io"
+           substring_before=$(echo ${name} | cut -d '-' -f 2)
+           echo "s11=$substring_before" >> $GITHUB_ENV
        - name: Extract Substring1
          run:  |
-          substring_before=${{ ${{env.s11}} | cut -d'-' -f1}}
-          echo "s1=${{env.s11}} | cut -d '-' -f 1" >> $GITHUB_ENV
-          echo substring_before
+           echo "${{ env.s11 }}
      
          
 
