--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -11,7 +11,9 @@ jobs:
   name: build and test
   runs-on: ubuntu-latest
   steps:
+    - uses: actions/checkout@v2
+      name: 'Checkout repository'
+      
     - name: hello
-      runs: |
-        echo $GITHUB_WORKSPACE
+      run:  echo $GITHUB_WORKSPACE
 
