--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,7 +2,7 @@ name: demo1
 
 on:
  push:
-  barnches:
+  branches:
     - master
  workflow_dispatch:
 
@@ -11,9 +11,6 @@ jobs:
   name: build and test
   runs-on: ubuntu-latest
   steps:
-    - uses: actions/checkout@v2
-    
-      
-    - name: hello
-      run:  echo $GITHUB_WORKSPACE
+    - name: Clear GitHub Workspace
+      run: rm -fr $GITHUB_WORKSPACE && mkdir $GITHUB_WORKSPACE
 
